--- a/css/pm/layout.css
+++ b/css/pm/layout.css
@@ -64,6 +64,10 @@
     min-width: 715px;
 }
 
+body.pwm-ui .pm-main .mega-header {
+    min-width: auto;
+}
+
 .pm-main .password-list-page,
 .pm-main .settings-wrap,
 .pm-main > section, 
@@ -88,63 +92,4 @@
 
 .theme-dark .pm-main .sprite-fm-illustration-wide.img-mega-logo {
     background: url('../../images/pm/favicons/pwm_logo_darkmode.svg') no-repeat;
-}
-
-/* New features for webclient layout */
-.password-list-page .detail-panel .nav-header {
-    display: none;
-}
-
-.password-list-page .left-pane-drag-handle {
-    right: -5px;
-}
-
-.password-list-page .left-pane-drag-handle::after {
-    display: none;
-}
-
-/* Small and Medium secondary content column */
-@media only screen and (max-width: 1079px) {
-    .password-list-page {
-        grid-auto-columns: 1fr;
-        grid-auto-rows: auto 1fr;
-    }
-
-    .password-list-page .password-list-panel {
-        width: 100% !important;
-        grid-row: 2/3;
-        background: var(--mobile-page-background);
-        z-index: 1;
-    }
-
-    .password-list-page .vertical-divider {
-        display: none;
-    }
-
-    .password-list-page .detail-panel {
-        grid-column: 1;
-        grid-row: 2/3;
-        z-index: 0;
-        background: var(--mobile-page-background);
-    }
-
-    .password-list-page .detail-panel.active {
-        z-index: 2;
-    }
-
-    .password-list-page .detail-panel .nav-header {
-        display: block;
-        padding: 16px 24px 0;
-    }
-
-    .password-list-page .empty-state {
-        grid-row: 3/4;
-    }
-}
-
-/* A 1080px screen has min value equal to max value */
-@media only screen and (max-width: 1080px) {
-    .password-list-page .password-list-panel .left-pane-drag-handle {
-        display: none;
-    }
 }
